// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with image 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#448AFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 6,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 50,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "#FFF",
          "fontFamily": "Raleway-ExtraBold",
          "fontSize": 30,
          "marginBottom": -2,
          "textAlign": "center",
        }
      }
    >
      Looking good 
      parent
      !
    </Text>
    <View
      style={
        Object {
          "height": 32,
        }
      }
    />
    <Image
      animation={undefined}
      duration={undefined}
      iterationCount={undefined}
      source={
        Object {
          "uri": "URI",
        }
      }
      style={
        Object {
          "borderColor": undefined,
          "borderRadius": 102,
          "borderWidth": 5.828571428571428,
          "height": 204,
          "marginBottom": 20.4,
          "shadowColor": "rgba(0,0,0,0.5)",
          "shadowOffset": Object {
            "height": 2,
          },
          "shadowRadius": 5,
          "width": 204,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 20,
          }
        }
      >
        Next Step
         
      </Text>
    </View>
  </View>
</View>
`;

exports[`Renders correctly without image 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#448AFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 6,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 50,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "#FFF",
          "fontFamily": "Raleway-ExtraBold",
          "fontSize": 30,
          "marginBottom": -2,
          "textAlign": "center",
        }
      }
    >
      [missing "en.general.thanks" translation]
      , 
      parent
      !
    </Text>
    <View
      style={
        Object {
          "height": 32,
        }
      }
    />
    <Image
      animation={undefined}
      duration={undefined}
      iterationCount={undefined}
      source={1}
      style={
        Object {
          "borderColor": undefined,
          "borderRadius": 102,
          "borderWidth": 5.828571428571428,
          "height": 204,
          "marginBottom": 20.4,
          "shadowColor": "rgba(0,0,0,0.5)",
          "shadowOffset": Object {
            "height": 2,
          },
          "shadowRadius": 5,
          "width": 204,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#FFF",
          "fontFamily": "Raleway-Regular",
          "fontSize": 16,
        }
      }
    >
      [missing "en.setImage.setAPictureFor" translation]
       
      kid
      .
    </Text>
    <View
      style={
        Object {
          "height": 32,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#FFF",
          "fontFamily": "Raleway-Regular",
          "fontSize": 16,
        }
      }
    >
      [missing "en.setImage.dontWorry" translation]
      .
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingLeft": 20,
        "paddingRight": 20,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 20,
          }
        }
      >
        [missing "en.setImage.notNow" translation]
         
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 20,
          }
        }
      >
        [missing "en.setImage.chooseAPicture" translation]
         
      </Text>
    </View>
  </View>
</View>
`;
